--- a/main.tex
+++ b/main.tex
@@ -90,20 +90,29 @@
 \chapter{Introduction}
 \label{ch:intro}
 This project lies in the scope of the \emph{RoboCupSoccer competition} project. The reader that is already familiar with this competition can skip the introduction and pursue his reading at chapter \ref{ch:prob}.\newline
-The Robocup competition is a international science and technology tournament created in 1997 \cite{robocupHistory}. The goal is to promote technology and advance the state-of-the-art in robotic and AI through a landmark project such as robot playing soccer. The ultimate goal however is ``By the middle of the 21st century, a team of fully autonomous humanoid robot soccer players shall win a soccer game, complying with the official rules of FIFA, against the winner of the most recent World Cup.'' \cite{RobocupObjective}.\newline
-The university of liege wants to take part to the competition. Therefore we first need to build a robotic platform. The platform illustrated in figure \ref{fig:platform} is composed of joint and links. 
+The Robocup competition is a international science and technology tournament created in 1997 \cite{robocupHistory}. The goal is to promote technology and advance the state-of-the-art in robotic and AI through a landmark project such as robot playing soccer. However the ultimate goal is ``by the middle of the 21st century, a team of fully autonomous humanoid robot soccer players shall win a soccer game, complying with the official rules of FIFA, against the winner of the most recent World Cup.'' \cite{RobocupObjective}.\newline
+The university of liege made up a team to take part to the competition. The categorie we want to take part of is the \emph{Humanoid kidSize}. In contrast to the \emph{Standart Platform}, the \emph{Humanoid kidSize} doesn't provide a platforme. Therefore we first need to build a robotic platform. The platform illustrated in figure \ref{fig:platform} is composed of joint and links. 
 
 \begin{figure}[h]
   \begin{minipage}[c]{0.3\textwidth}
     \includegraphics[width=\textwidth]{figs/platform.png}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.6\textwidth}
-    \caption{Image illustrating our platform. Each joint, in black, is a a servo motor (MX-28 \cite{MX28}) and each link, in red, is a 3D printed segment linking every joint together. The choice of this design is not discussed here.}
+    \caption{Illustration of our platform. Each joint, in black, is a a servo motor (MX-28 \cite{MX28}) and each link, in red, is a 3D printed segment linking every joint together. The choice of this design is not discussed here.}
     \label{fig:platform}
   \end{minipage}
 \end{figure}
-
-The origin of this project comes out of the work of \cite{masterGL}. \cite{masterGL} proposed to change the internal electronic components of every servo in order to increase the control accuracy, easily implement a variety of handcrafted commands, implement more accurate sensors, enable communication through CAN bus and use of a more powerful microcontroller. The next logical part of the work is thus to add a software layer in order to use the new homemade board's feature.\newline
+This project is focused on the low-level software implementation needed to drive every servo motor. 
+The origin of this project comes out of \cite{masterGL}'s work. \cite{masterGL} proposed to change the internal electronic components of every servo in order to increase:
+\begin{itemize}
+\item the control accuracy.\newline
+\item easily implement a variety of handcrafted commands.\newline
+\item implement more accurate sensors\newline
+\item enable communication through CAN bus.\newline
+\item use of a more powerful microcontroller.\newline
+\item etc.\newline
+\end{itemize}
+The next logical part of the work is thus to add a software layer in order to use the new homemade board's feature.\newline
 The goal of this project is to implement a software layer using a real time operating system (RTOS) as well as USB communication.\newline
 This document's purpose is twofold, defining the problem and explaining the solution used to solve it as well as giving a documentation and a starting point for the \emph{uLiege robocup}'s team members in order to continue the project.\newline
 In the next chapter we are going to define the problem we are facing and how it relates to the \emph{RoboCupSoccer competition} project. \newpage
