--- a/references.bib
+++ b/references.bib
@@ -42,3 +42,86 @@ isbn="978-1-4842-3624-6",
 doi="10.1007/978-1-4842-3624-6_1",
 url="https://doi.org/10.1007/978-1-4842-3624-6_1"
 }
+
+@unpublished{VanLaeken,
+  author       = {Van Laeken Lionel}, 
+  title        = {Modélisation et construction de la structure
+d’un robot humanoïde.},
+  note         = {Projet étudiant - participation au concours RoboCupSoccer},
+  month        = 7,
+  year         = 2017
+}
+
+
+@misc{cm3,
+  title = {libopencm3},
+  howpublished = {\url{http://libopencm3.org/}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {libopencm3}
+}
+
+
+@misc{cube,
+  title = {STM32CubeMX},
+  howpublished = {\url{https://www.st.com/en/development-tools/stm32cubemx.html}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {St}
+}
+
+@misc{usb-explained,
+  title = {program-usb-devices},
+  howpublished = {\url{https://www.electronicdesign.com/boards/how-create-and-program-usb-devices}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {St}
+}
+
+
+@misc{arm,
+  title = {arm-none-eabi},
+  howpublished = {\url{https://developer.arm.com/open-source/gnu-toolchain/gnu-rm/downloads}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {arm}
+}
+
+@book{FreeRTOSBook,
+  author = {Richard Barry},
+  title = {MAstering the {FreeRTOS} Real Time Kernel},
+  publisher = {Real Time Engineers Ltd},
+  year = {2010},
+  isbn = {978-1-4461-6914-8},
+  category = {os}
+}
+
+@MISC{hoglAbstractopen,
+    author = {Hubert Högl and Dominic Rath and Fachhochschule Augsburg and Fakultät Für Informatik},
+    title = {Abstract Open On-Chip Debugger},
+    year = {}
+}
+
+@misc{usbNutshell,
+  title = {usb in a nutshell},
+  howpublished = {\url{https://www.beyondlogic.org/usbnutshell/usb1.shtml}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {Craig Peacock}
+}
+
+@misc{usbClass,
+  title = {usb class},
+  howpublished = {\url{https://www.usb.org/defined-class-codes#anchor_BaseClass02h}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {USB.org}
+}
+
+@misc{adventure,
+  title = {Abandoned framhouse adventure},
+  howpublished = {\url{http://jefftranter.blogspot.com/2013/01/more-about-abandoned-farmhouse-adventure.html}},
+  note = {Accessed: 2019-01-02},
+  year = {2019},
+  author = {Jeff tranter}
+}
